--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,11 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "3.9"
-nicegui = "^1.4.3"
-pywin32 = "^306"
-pyinstaller = "^6.2.0"
-pywebview = "^4.4.1"
-dash = "^2.14.2"
-pandas = "^2.1.3"
+python = ">=3.9,<3.13"
+dash = "^2.16.1"
+pandas = "^2.2.1"
+ipykernel = "^6.29.3"
+pyinstaller = "^6.5.0"
 
 [build-system]
 requires = ["poetry-core"]
